--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                 let chatHistory = [];
                 chatHistory.push({ role: "user", parts: [{ text: prompt }] });
                 const payload = { contents: chatHistory };
-                const apiKey = "AIzaSyBtCRKq3UMXszLUEaAI9ZpTg9DzbPLoetY"; // Canvas will automatically provide this at runtime
+                const apiKey = ""; // Canvas will automatically provide this at runtime
                 const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
 
                 let retryCount = 0;
